--- a/UWOScholar/UWOScholar/Resources/layout/Register.axml
+++ b/UWOScholar/UWOScholar/Resources/layout/Register.axml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
   <EditText
-        android:id="@+id/emailRegister"
+        android:id="@+id/txtEmail"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -24,6 +24,20 @@
       android:layout_height="wrap_content"
       android:background="#ffffff"
       android:hint="Password..."
+      android:inputType="password"
+      android:textColor="#333639"
+      android:textColorHint="#333639"
+      android:padding="5dp" />
+  <EditText
+      android:id="@+id/passwordConfirm"
+      android:layout_width="match_parent"
+      android:layout_marginLeft="20dp"
+      android:layout_marginTop="20dp"
+      android:layout_marginRight="20dp"
+      android:layout_below="@+id/passwordRegister"
+      android:layout_height="wrap_content"
+      android:background="#ffffff"
+      android:hint="Confirm Password..."
       android:inputType="password"
       android:textColor="#333639"
       android:textColorHint="#333639"
