--- a/UWOScholar/UWOScholar/Resources/layout/Main.axml
+++ b/UWOScholar/UWOScholar/Resources/layout/Main.axml
@@ -23,7 +23,7 @@
         android:layout_below="@+id/UWOSeal"
         android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:hint="Username..."
+        android:hint="Username or Email..."
         android:textColor="#333639"
         android:textColorHint="#333639"
         android:padding="5dp" />
@@ -39,29 +39,29 @@
         android:hint="Password..."
         android:textColor="#333639"
         android:textColorHint="#333639"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:inputType="textPassword" />
     <Button
         android:id="@+id/btnLogin"
-        android:layout_below="@+id/password"
         android:layout_width="165dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_margin="20dp"
+        android:layout_below="@id/password"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/btnRegister"
         android:text="@string/Home"
         android:background="#ffffff"
         android:textColor="#333639"
         android:enabled="true" />
     <Button
         android:id="@+id/btnRegister"
-        android:layout_below="@+id/password"
-        android:layout_toRightOf="@+id/btnLogin"
         android:layout_width="165dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="20dp"
-        android:text="Register"
+        android:layout_margin="20dp"
+        android:layout_below="@+id/password"
+        android:layout_alignParentRight="true"
+        android:text="@string/Register"
         android:background="#ffffff"
-        android:textColor="#333639" />
+        android:textColor="#333639"
+        android:enabled="true" />
 </RelativeLayout>
