--- a/UWOScholar/UWOScholar/Resources/layout/Folder.axml
+++ b/UWOScholar/UWOScholar/Resources/layout/Folder.axml
@@ -23,12 +23,16 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:text="@string/AddAFolder"
             android:background="#ffcc00"
             android:textColor="#333639" />
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
+        <ListView
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/folderListView"
             android:layout_weight="1" />
         <Toolbar
             android:id="@+id/menu"
