--- a/UWOScholar/UWOScholar/Resources/layout/Folder.axml
+++ b/UWOScholar/UWOScholar/Resources/layout/Folder.axml
@@ -16,6 +16,16 @@
         android:layout_height="fill_parent"
         android:id="@+id/main_content"
         android:layout_below="@id/toolbar">
+        <EditText
+            android:id="@+id/txtName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Folder Name..."
+            android:textColor="#333639"
+            android:textColorHint="#333639"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
